--- a/src/views/pages/login.ejs
+++ b/src/views/pages/login.ejs
@@ -17,6 +17,7 @@
     <div class="row">
       <div class="col-12 col-6-tablet push-3-tablet text-center heading">
         <h1 class="font-100">Instagram account:</h1>
+        <h6 style="color:darkred; font-size:10px" class="font-100">Please remember to set session_id in config index file </br> before using account only login,</br> otherwise use instagram login on the left</h6>
       </div>
     </div>
     <div class="row">
@@ -27,9 +28,9 @@
             <input class="block" type="username" name="username" placeholder="username">
           </fieldset>
 
-          <!--<fieldset>
+          <fieldset>
             <input class="block form-control" type="password" name="password" placeholder="password">
-          </fieldset>-->
+          </fieldset>
 
           <button type="submit" id="login" class="button button-primary block signup">
             Use this Instagram account
